[metadata]
name = ParDF
version = 1.8.2
description = Word-Sys's PDF Editor
long_description = file: README.md
long_description_content_type = text/markdown
author = Barın Güzeldemirci (word-sys)
url = https://github.com/word-sys/pardf
license = GPLv3+
license_files = LICENSE

[options]
packages =
    word_sys_pdf_editor
include_package_data = False
install_requires =
    PyMuPDF
    numpy
    pygobject

[options.entry_points]
console_scripts =
    pardf = word_sys_pdf_editor.main:main
